fix: reset accordion z-index (#857)
* fix: remove unnecessary z-index from accordion component

* Revert "fix: remove unnecessary z-index from accordion component"

This reverts commit d8fc54703b541de3df51048579cd7b9b4e8213b4.

* fix: fix accordion layout issues by setting summary container to 0

---------

--- a/src/components/Accordion/accordion.module.scss
+++ b/src/components/Accordion/accordion.module.scss
@@ -68,6 +68,7 @@
     position: relative;
     width: 100%;
     transition: background-color $motion-duration-fast $motion-easing-easeout;
+    z-index: 0;
 
     .clickable-area {
       bottom: 0;
